# codex-scratchpad

./: AGENTS.md
aerial-crowd-poc/: LICENSE  README.md  app.py  models.yaml  requirements.txt
aerial-crowd-poc/aerocrowd/: __init__.py  __main__.py  utils.py
discord-marimo-issue-bot/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
discord-marimo-issue-bot/src/: bot.py  github_client.py  llm.py  models.py
discord-marimo-issue-bot/tests/: test_github_client.py  test_llm.py
population-marimo/: .gitignore  README.md  app.py  main.py  pyproject.toml
population-marimo/data/: SP.DYN.CBRT.IN.csv  SP.DYN.CDRT.IN.csv  SP.DYN.LE00.IN.csv  SP.DYN.TFRT.IN.csv
